# rust-reduce

./: Cargo.toml  README.md
src/: main.rs  output.rs
src/transforms/: clear_blocks.rs  mod.rs  prune_items.rs  remove_derive_attrs.rs  remove_doc_attrs.rs
tests/suite/: main.rs
tests/suite/futures_core/: output.rs  test.sh
tests/suite/futures_core/future/: future_obj.rs
